# ann-benchmarks

./: .gitignore  REAL_BENCHMARK_RESULTS.md  algos.yaml  hnnglib_wrapper.py  inspect_hdf5.py  real_results.csv  results_summary.txt  simulate_benchmarks.py  summarize_results.py
ann_benchmarks/algorithms/aihnngc/: Dockerfile  config.yml  module.py
ann_benchmarks/algorithms/aihnngc/cpp/: CMakeLists.txt  README.md  pyproject.toml  setup.py
ann_benchmarks/algorithms/aihnngc/cpp/bindings/: hnng_py.cpp
ann_benchmarks/algorithms/aihnngc/cpp/include/hnng/: distance.hpp  element.hpp  heap.hpp  hnng.hpp  level.hpp
ann_benchmarks/algorithms/aihnngc/cpp/src/: README.md
ann_benchmarks/algorithms/aihnngc/cpp/tests/: smoke_main.cpp
ann_benchmarks/algorithms/hnng/: Dockerfile  config.yml  module.py
ann_benchmarks/algorithms/hnng/src/hnnglib/: brutoforce.h  hnnalg.h  hnnglib.h  space_ip.h  space_l2.h  visited_list_pool.h
ann_benchmarks/algorithms/hnng/src/python_bindings/: bindings.cpp  setup.py
ann_benchmarks/algorithms/hnnglib/: Dockerfile  config.yml  module.py
ann_benchmarks/algorithms/hnnglib/src/: setup.py
ann_benchmarks/algorithms/hnnglib/src/hnnglib/: hnnalg.h  hnnglib.h  space_ip.h  space_l2.h
ann_benchmarks/algorithms/hnnglib/src/python_bindings/: bindings.cpp
